# Social-Network-Analysis-DA1

./: .ruff.toml  README.md  pyproject.toml
GROUP_F/: kevin_main.ipynb  piet_analysis.ipynb  pyproject.toml
GROUP_F/1_descriptive_analysis/: desriptive_analysis.ipynb
GROUP_F/2_community_detection/: community_detection.ipynb
GROUP_F/3_popularity_metrics/: popularity_metrics.ipynb
GROUP_F/4_sentiment_analysis/: sentiment_analysis.ipynb
GROUP_F/5_text_clustering/: text_clustering.ipynb
GROUP_F/community_detection/: community_detection.ipynb
GROUP_F/data/: graph.csv
GROUP_F/src/: kevin_main.ipynb  main.ipynb
GROUP_F/src/config /: .env
GROUP_F/src/data/: centrality_measures.csv  nodes.csv
GROUP_F/src/data_exploration/: data_exploration.py
GROUP_F/src/descriptive_analysis/: descriptive_analysis.ipynb
GROUP_F/src/hypothesis/: cluster_density_vs_sentiment_score.py  final_hypothesis.py
GROUP_F/text_clustering/: piet_analysis.ipynb
GROUP_F/utils/: json_to_csv.py
GROUP_F/visual_structure_analysis/: visual_network_structure_analysis.ipynb
