[tool.poetry]
name = "social-network-analysis-da1"
version = "0.1.0"
description = ""
authors = ["Marc Sutjipto <marcsutjipto@gmx.de>"]
readme = "README.md"
packages = [
    {include = "GROUP_F"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
networkx = "^3.4.2"
python-dotenv = "^1.0.1"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
transformers = "^4.48.0"
openai = "^1.59.7"
scikit-learn = "^1.6.1"
python-louvain = "^0.16"
igraph = "^0.11.8"
statsmodels = "^0.14.4"
numpy = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
