[tool.poetry]
name = "social-network-analysis-da1"
version = "0.1.0"
description = ""
authors = ["Marc Sutjipto <marcsutjipto@gmx.de>"]
readme = "README.md"
packages = [
    {include = "GROUP_F"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.3"
networkx = "^3.4.2"
python-dotenv = "^1.0.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
torch = "^2.5.1"
transformers = "^4.48.1"
python-igraph = "^0.11.8"
pycairo = "^1.27.0"
nltk = "^3.9.1"
umap-learn = "^0.5.7"
sentence-transformers = "^3.4.0"
gensim = "4.3.3"
node2vec = "^0.5.0"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
statsmodels = "^0.14.4"
python-louvain = "^0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
