[tool.poetry]
name = "group-f"
version = "0.1.0"
description = ""
authors = ["Marc Sutjipto <marcsutjipto@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.1"
networkx = "^3.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
